<?xml version="1.0" encoding="utf-8"?><!--登录--><!--
  ~ Copyright (c) 2015 Zhang Hai <Dreaming.in.Code.ZH@Gmail.com>
  ~ All Rights Reserved.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- Using android:layout_marginTop here to compensate for CardView's margin. -->
        <!-- Using dp as unit for android:textSize because this TextView functions as imagery. -->
        <include layout="@layout/title_back"></include>

        <Space
            android:layout_width="0dp"
            android:layout_height="50dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/screen_edge_horizontal_margin"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="48dp"
            tools:ignore="SpUsage" />

        <Space
            android:layout_width="0dp"
            android:layout_height="80dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="用户名"
                android:numeric="integer"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/text_cursor_cyan"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="11"
                app:met_primaryColor="?colorAccent" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="密码"
                android:inputType="text"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/text_cursor_cyan"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_maxCharacters="16"
                app:met_primaryColor="?colorAccent" />

            <Space
                android:layout_width="0dp"
                android:layout_height="20dp" />

            <LinearLayout
                android:id="@+id/form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="@dimen/card_content_horizontal_margin_with_4dp_padding"
                    android:layout_marginRight="@dimen/card_content_horizontal_margin_with_4dp_padding"
                    android:background="@drawable/btn_login_item_selector"
                    android:text="@string/auth_log_in"
                    android:textColor="@color/carbon_white"
                    android:textSize="@dimen/textview_size24" />

                <TextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginBottom="@dimen/card_action_margin"
                    android:layout_marginLeft="@dimen/card_action_margin_with_4dp_padding"
                    android:paddingBottom="10dp"
                    android:layout_marginRight="@dimen/card_action_margin_with_4dp_padding"
                    android:layout_marginTop="@dimen/card_action_margin"
                    android:background="#00000000"
                    android:paddingTop="10dp"
                    android:text="@string/auth_register"
                    android:textColor="@color/blue_3ff" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</ScrollView>
